# Hollow_kingdom

./: CMakeLists.txt  Lbuild.py  Makefile  build.py
game_struct/: Hollow kingdom.md  ai_class.md  createPersons_func.md  gameState_data.md  konata_person_func.md  main_entryPoint.md  person_data.md  platform_func.md  player_data.md  sceneCycle_class.md  sceneManager_class.md  scene_class.md  toolBox.md
game_struct/.obsidian/: workspace.json
src/: gameState.h  main.c  platform.c  platform.h  player.h
src/persons/: createPersons.c  createPersons.h  person.h
src/persons/konata/: konata.c  konata.h
src/renderer/: mesh.c  mesh.h  shader.c  shader.h  standartShader.h  texture.c  texture.h
src/renderer/geometry/: baseGeometry.c  baseGeometry.h
src/scene/: scene.c  scene.h  sceneManager.c  sceneManager.h
src/scene/idle/: hollow_kingdom.h  idle.c  idle.h
src/scene/mainMenu/: mainMenu.c  mainMenu.h
src/toolbox/: hashArray.c  hashArray.h  linal.h  pVoidArray.c  pVoidArray.h  toolBox.c  toolBox.h
